[workspace]
resolver = "2"
members = [
  "discriminator",
  "pod",
  "program-error",
  "tlv-account-resolution",
  "type-length-value",
  "type-length-value-derive-test",
]

[workspace.metadata.cli]
solana = "2.1.0"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2024-08-08"
lint = "nightly-2024-08-08"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"
