[workspace]
resolver = "2"
members = [
  "discriminator",
  "generic-token",
  "generic-token-tests",
  "pod",
  "program-error",
  "tlv-account-resolution",
  "type-length-value",
  "type-length-value-derive-test",
]

[workspace.metadata.cli]
solana = "2.2.0"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
nightly = "nightly-2024-11-22"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false
