[package]
name = "spl-generic-token"
version = "1.0.1"
description = "Solana Program Library Generic Token"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/libraries"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bytemuck = "1.22.0"
solana-pubkey = { version = "2.2.1", default-features = false, features = [
    "bytemuck",
] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
