[package]
name = "spl-program-error"
version = "0.7.0"
description = "Library for Solana Program error attributes and derive macro for creating them"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/libraries"
license = "Apache-2.0"
edition = "2021"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
solana-decode-error = "2.2.1"
solana-msg = "2.2.1"
solana-program-error = "2.2.1"
spl-program-error-derive = { version = "0.5.0", path = "./derive" }
thiserror = "2.0"

[dev-dependencies]
lazy_static = "1.5"
serial_test = "3.2"
solana-sha256-hasher = "2.2.1"
solana-sysvar = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
