[package]
name = "spl-type-length-value-derive-test"
version = "0.1.0"
description = "Testing Derive Macro Library for SPL Type Length Value traits"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/libraries"
license = "Apache-2.0"
edition = "2021"
publish = false

[dev-dependencies]
borsh = "1.5.7"
solana-borsh = "2.2.1"
spl-discriminator = { version = "0.4.0", path = "../discriminator" }
spl-type-length-value = { version = "0.8.0", path = "../type-length-value", features = [
  "derive",
] }
