[package]
name = "spl-discriminator-derive"
version = "0.2.0"
description = "Derive macro library for the `spl-discriminator` library"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/libraries"
license = "Apache-2.0"
edition = "2021"

[dependencies]
quote = "1.0"
spl-discriminator-syn = { version = "0.2.0", path = "../syn" }
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
