[package]
name = "spl-program-error-derive"
version = "0.5.0"
description = "Proc-Macro Library for Solana Program error attributes and derive macro"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/libraries"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
sha2 = "0.10"
syn = { version = "2.0", features = ["full"] }
